List View Adapter Finished. Main Page only needs the onActivityResume function. A seperate object file was created to hand intent requests. The list item XML file was created. Basically all of these updates were copying code over from the old project with minor improvements.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="menu_settings">settings</string>
     <!-- menu item strings -->
 
+    <!-- list item strings-->
+    <string name="listItem_enabled">enabled</string>
+    <string name="listItem_disabled">disabled</string>
 
     <!-- buttons -->
     <string name="btn_cancel">cancel</string>
