--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,11 +27,11 @@
 
     <!-- volume preference titles -->
     <string name="label_volPreferences">volume preferences</string>
-    <string name="label_phone">ringtone</string>
+    <string name="label_phone">ringer</string>
     <string name="label_notification">notifications</string>
     <string name="label_feedback">touch feedback &amp; system</string>
     <string name="label_media">music, video, games and other media</string>
-    <string name="label_vibrate">Vibration</string>
+    <string name="label_vibrate">vibrate only</string>
 
     <!-- setting title -->
     <string name="label_title">title</string>
@@ -65,5 +65,7 @@
 
     <string name="toast_silent">phone set to silent</string>
     <string name="toast_vibrate">phone set to vibrate only</string>
-    <string name="toast_custom">phone volume set</string>
+    <string name="toast_volume">phone volume set</string>
+
+    <string name="toast_error">an error occurred</string>
 </resources>
