Working on SettingsPage: finish 'time frame' error checking  between settings, initialize views from update, handle update (title change). Changed volume icon colors.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,8 @@
     <string name="toast_vibrate">phone set to vibrate only</string>
     <string name="toast_volume">phone volume set</string>
 
+    <string name="toast_no_title">please enter a title for this time setting</string>
+    <string name="toast_title_exists">a setting with this title already exists, please chose another title</string>
+    <string name="toast_invalid_timeframe">the start/end time frame entered is invalid</string>
     <string name="toast_error">an error occurred</string>
 </resources>
